--- a/html/Main.html
+++ b/html/Main.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="/test2/css/Main.css">
+    <link rel="stylesheet" href="/css/Main.css">
 
     <title>Main</title>
 </head>
