--- a/html/Main.html
+++ b/html/Main.html
@@ -233,7 +233,7 @@
                                                     <p class='block3__name_slide'>Контроллер</p>
                                                     <p class='block3__price_slide'>2555-4240грн</p>
                                                 </div>
-                                                <img class="clickCircle" src="/img/sircleEmptyXl.png" alt="">
+                                                <img class="clickCircle" src="/img/sircleEmptyXl.png" alt="" data-status="empty">
                                             </div>
                                             <div class='block3__slide_subtext3'>
                                                 <p>Запчастина: Mamba F722</p>
@@ -257,7 +257,7 @@
                                                     <p class='block3__name_slide'>Карбон на раму</p>
                                                     <p class='block3__price_slide'>245-1845грн</p>
                                                 </div>
-                                                <img class="clickCircle" src="/img/sircleEmptyXl.png" alt="">
+                                                <img class="clickCircle" src="/img/sircleEmptyXl.png" alt="" data-status="empty">
                                             </div>
                                             <div class='block3__slide_subtext3'>
                                                 <p>Запчастина: Apex/Apex HD</p>
@@ -281,7 +281,7 @@
                                                     <p class='block3__name_slide'>Мотори, 4 шт</p>
                                                     <p class='block3__price_slide'>1130-4120грн</p>
                                                 </div>
-                                                <img class="clickCircle" src="/img/sircleEmptyXl.png" alt="">
+                                                <img class="clickCircle" src="/img/sircleEmptyXl.png" alt="" data-status="empty">
                                             </div>
                                             <div class='block3__slide_subtext3'>
                                                 <p>Запчастина: Brotherhobby</p>
@@ -305,7 +305,7 @@
                                                     <p class='block3__name_slide'>Радіоприймач(1)</p>
                                                     <p class='block3__price_slide'>885-1165грн</p>
                                                 </div>
-                                                <img class="clickCircle" src="/img/sircleEmptyXl.png" alt="">
+                                                <img class="clickCircle" src="/img/sircleEmptyXl.png" alt="" data-status="empty">
                                             </div>
                                             <div class='block3__slide_subtext3'>
                                                 <p>Запчастина: TBS Crossfire</p>
@@ -329,7 +329,7 @@
                                                     <p class='block3__name_slide'>Радіоприймач(1)</p>
                                                     <p class='block3__price_slide'>885-1165грн</p>
                                                 </div>
-                                                <img class="clickCircle" src="/img/sircleEmptyXl.png" alt="">
+                                                <img class="clickCircle" src="/img/sircleEmptyXl.png" alt="" data-status="empty">
                                             </div>
                                             <div class='block3__slide_subtext3'>
                                                 <p>Запчастина: TBS Crossfire</p>
@@ -438,7 +438,7 @@
                 slidesPerView: 3
             },
             700:{
-                slidesPerView: 3
+                slidesPerView: 4
             },
             1000:{
                 slidesPerView: 4
@@ -449,6 +449,9 @@
             1682: {
             slidesPerView: 4
             },
+            3500: {
+                slidesPerView: 4
+            }
         }
     },
         );
