--- a/html/Main.html
+++ b/html/Main.html
@@ -129,13 +129,13 @@
                                     </div>
                                 </div>
                             </div>
-                            <div  class="swiper-pagination"></div>
                         </div>
                     </div>
-                    <div class="slider1__click">
-                        <img class="button-next" src="/img/трілка сіра.png" alt="">
-                        <img class="button-prev" src="/img/стрілка чорна.png" alt="">
-                    </div>
+                </div>
+                <div class="slider1__click">
+                    <img class="button-next" src="/img/трілка сіра.png" alt="">
+                    <div  class="pagination"></div>
+                    <img class="button-prev" src="/img/стрілка чорна.png" alt="">
                 </div>
             </section>
             <div class="gradient">
@@ -215,7 +215,7 @@
                             <button class="baby__button">Baby Dragon</button>
                         </div>
                         <div class="section4__block3">
-                            <div class="swiper mySwiper">
+                            <div style="display: block;" class="swiper mySwiper swiper__active-1">
                                 <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <div class="slide1 section4__block3_content">
@@ -280,6 +280,136 @@
                                                 <div>
                                                     <p class='block3__name_slide'>Мотори, 4 шт</p>
                                                     <p class='block3__price_slide'>1130-4120грн</p>
+                                                </div>
+                                                <img class="clickCircle" src="/img/sircleEmptyXl.png" alt="" data-status="empty">
+                                            </div>
+                                            <div class='block3__slide_subtext3'>
+                                                <p>Запчастина: Brotherhobby</p>
+                                                <p>3008</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="slide4 section4__block3_content">
+                                        <div class="section4__block3__slide">
+                                            <div class="block3__slide-img">
+                                                <img src="/img/Slide4.png" alt="" class="">
+                                            </div>
+                                            <div class='block3__slide_subtext'>
+                                                <p>Необхідно: 10</p>
+                                                <p>Зібрано: 0</p>
+                                            </div>
+                                            <div class='block3__slide_subtext2'>
+                                                <div>
+                                                    <p class='block3__name_slide'>Радіоприймач(1)</p>
+                                                    <p class='block3__price_slide'>885-1165грн</p>
+                                                </div>
+                                                <img class="clickCircle" src="/img/sircleEmptyXl.png" alt="" data-status="empty">
+                                            </div>
+                                            <div class='block3__slide_subtext3'>
+                                                <p>Запчастина: TBS Crossfire</p>
+                                                <p>Nano RX</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="slide4 section4__block3_content">
+                                        <div class="section4__block3__slide">
+                                            <div class="block3__slide-img">
+                                                <img src="/img/Slide4.png" alt="" class="">
+                                            </div>
+                                            <div class='block3__slide_subtext'>
+                                                <p>Необхідно: 10</p>
+                                                <p>Зібрано: 0</p>
+                                            </div>
+                                            <div class='block3__slide_subtext2'>
+                                                <div>
+                                                    <p class='block3__name_slide'>Радіоприймач(1)</p>
+                                                    <p class='block3__price_slide'>885-1165грн</p>
+                                                </div>
+                                                <img class="clickCircle" src="/img/sircleEmptyXl.png" alt="" data-status="empty">
+                                            </div>
+                                            <div class='block3__slide_subtext3'>
+                                                <p>Запчастина: TBS Crossfire</p>
+                                                <p>Nano RX</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">Slide 6</div>
+                                <div class="swiper-slide">Slide 7</div>
+                                <div class="swiper-slide">Slide 8</div>
+                                <div class="swiper-slide">Slide 9</div>
+                                </div>
+                                <div class="swiper-pagination"></div>
+                            </div> 
+                            <div style="display: none;"  class="swiper mySwiper swiper__active-2">
+                                <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <div class="slide1 section4__block3_content">
+                                        <div class="section4__block3__slide">
+                                            <div class="block3__slide-img">
+                                                <img src="/img/Slide 5.png" alt="" class="">
+                                            </div>
+                                            <!-- <img src="/img/Slide1.png" alt="" class=""> -->
+                                            <div class='block3__slide_subtext'>
+                                                <p>Необхідно: 10</p>
+                                                <p>Зібрано: 0</p>
+                                            </div>
+                                            <div class='block3__slide_subtext2'>
+                                                <div>
+                                                    <p class='block3__name_slide'>Контроллер </p>
+                                                    <p class='block3__price_slide'>1330-2240грн</p>
+                                                </div>
+                                                <img class="clickCircle" src="/img/sircleEmptyXl.png" alt="" data-status="empty">
+                                            </div>
+                                            <div class='block3__slide_subtext3'>
+                                                <p>Запчастина: SpeedyBee F405</p>
+                                                <p>V3</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="slide2 section4__block3_content">
+                                        <div class="section4__block3__slide">
+                                            <div class="block3__slide-img">
+                                                <img src="/img/Slide 6.png" alt="" class="">
+                                            </div>
+                                            <div class='block3__slide_subtext'>
+                                                <p>Необхідно: 10</p>
+                                                <p>Зібрано: 0</p>
+                                            </div>
+                                            <div class='block3__slide_subtext2'>
+                                                <div>
+                                                    <p class='block3__name_slide'>Рама</p>
+                                                    <p class='block3__price_slide'>720-1070грн</p>
+                                                </div>
+                                                <img class="clickCircle" src="/img/sircleEmptyXl.png" alt="" data-status="empty">
+                                            </div>
+                                            <div class='block3__slide_subtext3'>
+                                                <p>Запчастина: Apex/Apex HD</p>
+                                                <p>Модель: 7 inch</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="slide3 section4__block3_content">
+                                        <div class="section4__block3__slide">
+                                            <div class="block3__slide-img">
+                                                <img src="/img/Slide 7.png" alt="" class="">
+                                            </div>
+                                            <div class='block3__slide_subtext'>
+                                                <p>Необхідно: 10</p>
+                                                <p>Зібрано: 0</p>
+                                            </div>
+                                            <div class='block3__slide_subtext2'>
+                                                <div>
+                                                    <p class='block3__name_slide'>Мотори, 4 шт</p>
+                                                    <p class='block3__price_slide'>2695-2790грн</p>
                                                 </div>
                                                 <img class="clickCircle" src="/img/sircleEmptyXl.png" alt="" data-status="empty">
                                             </div>
@@ -426,8 +556,8 @@
         //     clickable: true,
         //   },
           navigation: {
-            nextEl: ".prevButton",
-            prevEl: ".nextButton",
+            nextEl: ".nextButton",
+            prevEl: ".prevButton",
           },
             breakpoints: {
             0:{
@@ -460,11 +590,12 @@
     </script>
     <script>
         var swiper = new Swiper(".mySwiper1", {
+          
           slidesPerView: 2,
           spaceBetween: 30,
           loop: true,
           pagination: {
-            el: ".swiper-pagination",
+            el: ".pagination",
             clickable: true,
           },
           navigation: {
