--- a/html/MyProfile.html
+++ b/html/MyProfile.html
@@ -45,9 +45,13 @@
                     <li class="header__li"><a href="/html/Main.html#needItem" class="">Необхідні комплектуючі</li>
                     <li class="header__li"><a href="/html/Main.html#photoReport" class="">Фотозвіт</a></li>
                     <li class="header__li"><a href="#footer" class="">Контакти</a></li>
-                    <li class="header__li"><img src="/img/user accountGREEN.png" alt=""></li>
+                    <li class="header__li"><a style="text-decoration: underline;">Максим</a><img src="/img/user accountGREEN.png" alt=""></li>
                 </ol>
             </nav>
+            <div class="header__navigation">
+                <a href="/html/Main.html">Головна /</a>
+                <p href="/">Особистий кабінет</p>
+            </div>
         </header>
         <main class="main">
             <section class="main__section1">
@@ -136,11 +140,15 @@
                             </div>
                     </div>
                 </div>
+                <!-- <div class="section1__changeProfile_block">
+                    <a href="" class="section1__changeProfile">Редагувати профіль</a>
+                </div> -->
+            </section>
+            <section class="main__section2">
                 <div class="section1__changeProfile_block">
                     <a href="" class="section1__changeProfile">Редагувати профіль</a>
                 </div>
             </section>
-            
         </main>
         <footer id="footer" class="footer">
             <div>
