--- a/html/ReportPhoto.html
+++ b/html/ReportPhoto.html
@@ -46,6 +46,10 @@
                     <li class="header__li"><img src="/img/user accountGREEN.png" alt=""></li>
                 </ol>
             </nav>
+            <div class="header__navigation">
+                <a href="">Головна /</a>
+                <a href="">Фотозвіт</a>
+            </div>
         </header>
         <main class="main">
             <section class="main__section1">
@@ -67,8 +71,6 @@
                             <img class="section1__photo6" src="/img/photoReport6.png" alt="">
                             <img class="section1__photo7" src="/img/photoReport7.png" alt="">
                         </div>
-                        
-                        
                     </div>
                 </div>
             </section>
