--- a/html/SettingProfile.html
+++ b/html/SettingProfile.html
@@ -45,9 +45,14 @@
                     <li class="header__li"><a href="/html/Main.html#needItem" class="">Необхідні комплектуючі</li>
                     <li class="header__li"><a href="/html/Main.html#photoReport" class="">Фотозвіт</a></li>
                     <li class="header__li"><a href="#footer" class="">Контакти</a></li>
-                    <li class="header__li"><img src="/img/userAccountBgGreen.png" alt=""></li>
+                    <li class="header__li"><a href="">Максим</a><img src="/img/userAccountBgGreen.png" alt=""></li>
                 </ol>
             </nav>
+            <div class="header__navigation">
+                <a href="/html/Main.html">Головна /</a>
+                <a href="/html/MyProfile.html">Особистий кабінет /</a>
+                <p>Редагувати профіль</p>
+            </div>
         </header>
         <main class="main">
             <section class="main__section1">
