--- a/html/Instruction.html
+++ b/html/Instruction.html
@@ -52,8 +52,8 @@
                 </ol>
             </nav>
             <div class="header__navigation">
-                <a href="">Головна /</a>
-                <a href="">Інструкція</a>
+                <a href="/html/Main.html">Головна /</a>
+                <p href="">Інструкція</p>
             </div>
         </header>
         <main class="main">
