--- a/html/Main.html
+++ b/html/Main.html
@@ -25,7 +25,7 @@
                             </div>
                         </div>
                         <h1 class="header__liFirst1">DragonLab<br>DRONES</h1>
-                        <a class="burger__profile" href=""><img src="/img/user accountIcons.png" alt=""></a>
+                        <a class="burger__profile" href="/html/MyProfile.html"><img src="/img/user accountIcons.png" alt=""></a>
                     </div>
                     <div class="burger__block2">
                         <ol class='header__ol1'>
@@ -482,13 +482,13 @@
                         </div>
                         <div class="section4__subSlideInfo">
                             <div>
-                                <a href="">Хочу придбати</a>
+                                <a href="/html/Instruction.html">Хочу придбати</a>
                             </div>
                             <p>При перевищенні цінності Вашого замовлення понад 150 EUR,<br>
                                 буде нараховано мито в розмірі 10% і ПДВ в розмірі 20% від вартості посилки.
                             </p>
                             <div>
-                                <a href="">Хочу придбати</a>
+                                <a href="/html/Instruction.html">Хочу придбати</a>
                             </div>
                         </div>
                     </div>
@@ -511,8 +511,7 @@
 
                         </div>
                         <div class="section5__look-more1">
-                            <a href="/html/ReportPhoto.html" class="">Дивитися більше</a>
-                            <img src="/img/стрілка чорна.png" alt="">
+                            <a href="/html/ReportPhoto.html" class=""><span>Дивитися більше</span><img src="/img/стрілка чорна.png" alt=""></a>
                         </div>
                     </div>
                 </section>
@@ -616,7 +615,7 @@
                 slidesPerView: 2
             },
             1000:{
-                slidesPerView: 2
+                slidesPerView: 2,
             },
         }
         });
