--- a/html/MyProfile.html
+++ b/html/MyProfile.html
@@ -45,7 +45,7 @@
                     <li class="header__li"><a href="/html/Main.html#needItem" class="">Необхідні комплектуючі</li>
                     <li class="header__li"><a href="/html/Main.html#photoReport" class="">Фотозвіт</a></li>
                     <li class="header__li"><a href="#footer" class="">Контакти</a></li>
-                    <li class="header__li"><a style="text-decoration: underline;">Максим</a><img src="/img/user accountGREEN.png" alt=""></li>
+                    <li class="header__li"><a  href="/html/MyProfile.html"><span>Максим</span> <img src="/img/user accountGREEN.png" alt=""></a></li>
                 </ol>
             </nav>
             <div class="header__navigation">
@@ -59,7 +59,7 @@
                     <div class="section1__block">
                         <h1 class="section1__title">Моя допомога</h1>
                         <div class="section1__changeProfile_block">
-                            <a href="" class="section1__changeProfile">Редагувати профіль</a>
+                            <a href="/html/SettingProfile.html" class="section1__changeProfile">Редагувати профіль</a>
                         </div>
                     </div>
                     <div class="section1__block2">
@@ -146,7 +146,7 @@
             </section>
             <section class="main__section2">
                 <div class="section1__changeProfile_block">
-                    <a href="" class="section1__changeProfile">Редагувати профіль</a>
+                    <a href="/html/SettingProfile.html" class="section1__changeProfile">Редагувати профіль</a>
                 </div>
             </section>
         </main>
