--- a/html/SettingProfile.html
+++ b/html/SettingProfile.html
@@ -45,7 +45,7 @@
                     <li class="header__li"><a href="/html/Main.html#needItem" class="">Необхідні комплектуючі</li>
                     <li class="header__li"><a href="/html/Main.html#photoReport" class="">Фотозвіт</a></li>
                     <li class="header__li"><a href="#footer" class="">Контакти</a></li>
-                    <li class="header__li"><a href="">Максим</a><img src="/img/userAccountBgGreen.png" alt=""></li>
+                    <li class="header__li"><a  href="/html/MyProfile.html"><span>Максим</span> <img src="/img/user accountGREEN.png" alt=""></a></li>
                 </ol>
             </nav>
             <div class="header__navigation">
