--- a/html/Instruction.html
+++ b/html/Instruction.html
@@ -48,7 +48,7 @@
                     <li class="header__li"><a href="/html/Main.html#needItem" class="">Необхідні комплектуючі</li>
                     <li class="header__li"><a href="/html/Main.html#photoReport" class="">Фотозвіт</a></li>
                     <li class="header__li"><a href="#footer" class="">Контакти</a></li>
-                    <li class="header__li"><img src="/img/user accountGREEN.png" alt=""></li>
+                    <li class="header__li"><a href="/html/MyProfile.html"><img src="/img/user accountGREEN.png" alt=""></a></li>
                 </ol>
             </nav>
             <div class="header__navigation">
