--- a/html/MyProfile.html
+++ b/html/MyProfile.html
@@ -21,7 +21,7 @@
                             </div>
                         </div>
                         <h1 class="header__liFirst1">DragonLab<br>DRONES</h1>
-                        <a class="burger__profile" href="/img/user accountGREEN.png">
+                        <a class="burger__profile" href="/html/MyProfile.html">
                             <img src="/img/userAccountBgGreen.png"alt=""></a>
                     </div>
                     <div class="burger__block2">
