--- a/html/ReportPhoto.html
+++ b/html/ReportPhoto.html
@@ -100,6 +100,6 @@
             </div>
         </footer>
     </div>
-    <script src="/js/script.js"></script>
+    <script src="/js/Instuction.js"></script>
 </body>
 </html>
