--- a/html/Instruction.html
+++ b/html/Instruction.html
@@ -24,8 +24,7 @@
                             </div>
                         </div>
                         <h1 class="header__liFirst1">DragonLab<br>DRONES</h1>
-                        <a class="burger__profile" href="/html/MyProfile.html"><img src="/img/user accountGREEN.png"
-                                alt=""></a>
+                        <a class="burger__profile" href="/html/MyProfile.html"><img src="/img/user accountGREEN.png"alt=""></a>
                     </div>
                     <div class="burger__block2">
                         <ol class='header__ol1'>
