--- a/html/MyProfile.html
+++ b/html/MyProfile.html
@@ -20,24 +20,24 @@
                                 <div class="burger__3"></div>
                             </div>
                         </div>
-                        <h1 class="header__liFirst1">DragonLab<br>DRONES</h1>
+                        <img class="header__logo " src="/img/logo-title_Green.png"/>
                         <a class="burger__profile" href="/html/MyProfile.html">
-                            <img src="/img/userAccountBgGreen.png"alt=""></a>
+                            <img src="/img/userAccountBgGreen.png"alt="">
+                        </a>
                     </div>
                     <div class="burger__block2">
                         <ol class='header__ol1'>
                             <li class="header__li1"><a href="/html/Main.html" class="">Головна</a></li>
                             <li class="header__li1"><a href="/html/Main.html#aboutUs" class="">Про нас</a></li>
                             <li class="header__li1"><a href="/html/Main.html#help" class="">Як допомогти</a></li>
-                            <li class="header__li1"><a href="/html/Main.html#needItem" class="">Необхідні комплектуючі
-                            </li>
+                            <li class="header__li1"><a href="/html/Main.html#needItem" class="">Необхідні комплектуючі</li>
                             <li class="header__li1"><a href="/html/Main.html#photoReport" class="">Фотозвіт</a></li>
                             <li class="header__li1"><a href="#footer" class="">Контакти</a></li>
                         </ol>
                     </div>
                 </div>
 
-                <h1 class="header__liFirst">DragonLab<br>DRONES</h1>
+                <img class="header__logo header__logo_off" src="/img/logo-title_Green.png"/>
                 <ol class='header__ol'>
                     <li class="header__li"><a href="/html/Main.html" class="">Головна</a></li>
                     <li class="header__li"><a href="/html/Main.html#aboutUs" class="">Про нас</a></li>
@@ -45,12 +45,12 @@
                     <li class="header__li"><a href="/html/Main.html#needItem" class="">Необхідні комплектуючі</li>
                     <li class="header__li"><a href="/html/Main.html#photoReport" class="">Фотозвіт</a></li>
                     <li class="header__li"><a href="#footer" class="">Контакти</a></li>
-                    <li class="header__li"><a  href="/html/MyProfile.html"><span>Максим</span> <img src="/img/user accountGREEN.png" alt=""></a></li>
+                    <li class="header__li"><a class="last_a" href="/html/MyProfile.html"><span>Максим</span> <img src="/img/user accountGREEN.png" alt=""></a></li>
                 </ol>
             </nav>
             <div class="header__navigation">
                 <a href="/html/Main.html">Головна /</a>
-                <p href="/">Особистий кабінет</p>
+                <p>Особистий кабінет </p>
             </div>
         </header>
         <main class="main">
@@ -152,7 +152,7 @@
         </main>
         <footer id="footer" class="footer">
             <div>
-                <p class="header__liFirst">DragonLab<br>DRONES</p>
+                <img class="header__logo " src="/img/logo-title.png"/>
                 <div class="footer_wrapper">
                     <ol class="footer__list1">
                         <li>Дані для переадресації посилки:</li>
