--- a/html/SingIn.html
+++ b/html/SingIn.html
@@ -20,24 +20,24 @@
                                 <div class="burger__3"></div>
                             </div>
                         </div>
-                        <h1 class="header__liFirst1">DragonLab<br>DRONES</h1>
+                        <img class="header__logo " src="/img/logo-title_Green.png"/>
                         <a class="burger__profile" href="/html/MyProfile.html">
-                            <img src="/img/userAccountBgGreen.png"alt=""></a>
+                            <img src="/img/userAccountBgGreen.png"alt="">
+                        </a>
                     </div>
                     <div class="burger__block2">
                         <ol class='header__ol1'>
                             <li class="header__li1"><a href="/html/Main.html" class="">Головна</a></li>
                             <li class="header__li1"><a href="/html/Main.html#aboutUs" class="">Про нас</a></li>
                             <li class="header__li1"><a href="/html/Main.html#help" class="">Як допомогти</a></li>
-                            <li class="header__li1"><a href="/html/Main.html#needItem" class="">Необхідні комплектуючі
-                            </li>
+                            <li class="header__li1"><a href="/html/Main.html#needItem" class="">Необхідні комплектуючі</li>
                             <li class="header__li1"><a href="/html/Main.html#photoReport" class="">Фотозвіт</a></li>
                             <li class="header__li1"><a href="#footer" class="">Контакти</a></li>
                         </ol>
                     </div>
                 </div>
 
-                <h1 class="header__liFirst">DragonLab<br>DRONES</h1>
+                <img class="header__logo header__logo_off" src="/img/logo-title_Green.png"/>
                 <ol class='header__ol'>
                     <li class="header__li"><a href="/html/Main.html" class="">Головна</a></li>
                     <li class="header__li"><a href="/html/Main.html#aboutUs" class="">Про нас</a></li>
@@ -45,7 +45,7 @@
                     <li class="header__li"><a href="/html/Main.html#needItem" class="">Необхідні комплектуючі</li>
                     <li class="header__li"><a href="/html/Main.html#photoReport" class="">Фотозвіт</a></li>
                     <li class="header__li"><a href="#footer" class="">Контакти</a></li>
-                    <li class="header__li"><a href="/html/MyProfile.html"><img src="/img/userAccountBgGreen.png" alt=""></a></li>
+                    <li class="header__li"><a class="last_a" href="/html/MyProfile.html"><img src="/img/user accountGREEN.png" alt=""></a></li>
                 </ol>
             </nav>
         </header>
@@ -56,7 +56,7 @@
                     <div class="section1__input_text"><input type="text" placeholder="Електронна адреса" name="" ></div>
                     <div class="section1__input_pass"><input type="password" placeholder="Пароль" name="" ></div>
                     <div class="section1__container">
-                        <p>Забули пароль</p>
+                        <a href="#">Забули пароль</a>
                         <img src="/img/стрілка чорна.png" alt="">
                     </div>
                     <div class="section1__enter">
@@ -70,7 +70,7 @@
         </main>
         <footer id="footer" class="footer">
             <div>
-                <p class="header__liFirst">DragonLab<br>DRONES</p>
+                <img class="header__logo " src="/img/logo-title.png"/>
                 <div class="footer_wrapper">
                     <ol class="footer__list1">
                         <li>Дані для переадресації посилки:</li>
