--- a/html/Registry.html
+++ b/html/Registry.html
@@ -60,7 +60,9 @@
                         <a>Забули пароль</a>
                         <img src="/img/стрілка чорна.png" alt="">
                     </div>
-                    <div class="section1__enter"><a href="/">Зареєструватись</a></div>
+                    <div class="section1__enter">
+                        <a href="/">Зареєструватись</a>
+                    </div>
                     <div class="section1__nav">
                         <p class="section1__nav_tex1">Маєте аккаунт?</p>
                         <a href="/html/SingIn.html" class="">Увійти</a>
