--- a/html/ReportPhoto.html
+++ b/html/ReportPhoto.html
@@ -20,7 +20,7 @@
                                 <div class="burger__3"></div>
                             </div>
                         </div>
-                        <h1 class="header__liFirst1">DragonLab<br>DRONES</h1>
+                        <img class="header__logo " src="/img/logo-title_Green.png"/>
                         <a class="burger__profile" href="/html/MyProfile.html"><img src="/img/user accountGREEN.png" alt=""></a>
                     </div>
                     <div class="burger__block2">
@@ -35,7 +35,7 @@
                     </div>
                 </div>
                 
-                <h1 class="header__liFirst">DragonLab<br>DRONES</h1>
+                <img class="header__logo header__logo_off" src="/img/logo-title_Green.png"/>
                 <ol class='header__ol'>
                     <li class="header__li"><a href="/html/Main.html" class="">Головна</a></li>
                     <li class="header__li"><a href="/html/Main.html#aboutUs" class="">Про нас</a></li>
@@ -78,7 +78,7 @@
         </main>
         <footer id="footer" class="footer">
             <div>
-                <p class="header__liFirst">DragonLab<br>DRONES</p>
+                <img class="header__logo " src="/img/logo-title.png"/>
                 <div class="footer_wrapper">
                     <ol class="footer__list1">
                         <li>Дані для переадресації посилки:</li>
