--- a/html/SettingProfile.html
+++ b/html/SettingProfile.html
@@ -79,7 +79,7 @@
                                 </div>  
                             </div>
                             <div class="block2__changeInfo">
-                                <a href="">Змінити</a>
+                                <a type="submit" href="">Змінити</a>
                             </div>                    
                         </div>  
                     </div>
