--- a/html/ReportPhoto.html
+++ b/html/ReportPhoto.html
@@ -47,7 +47,7 @@
                 </ol>
             </nav>
             <div class="header__navigation">
-                <a href="">Головна /</a>
+                <a href="/html/Main.html">Головна /</a>
                 <a href="">Фотозвіт</a>
             </div>
         </header>
